refactor: replaced 'Read more' link text with 'Read this' and added aria-label in links in to fix pagespeed issues

--- a/partials/story/story-grid.hbs
+++ b/partials/story/story-grid.hbs
@@ -36,8 +36,8 @@
 
             {{else}}
 
-            {{!-- Read more --}}
-            <a href="{{url}}" class="link is-hover font-medium">{{t "Read more"}}<svg class="icon is-medium"><use xlink:href="#icon-arrow"></use></svg></a>
+            {{!-- Read this --}}
+            <a href="{{url}}" class="link is-hover font-medium" aria-label="{{title}}">{{t "Read this"}}<svg class="icon is-medium"><use xlink:href="#icon-arrow"></use></svg></a>
             {{/match}}
         </div>
 
@@ -63,8 +63,8 @@
 
             {{else}}
 
-            {{!-- Read more --}}
-            <a href="{{url}}" class="link is-hover font-medium">{{t "Read more"}}<svg class="icon is-medium"><use xlink:href="#icon-arrow"></use></svg></a>
+            {{!-- Read this --}}
+            <a href="{{url}}" class="link is-hover font-medium" aria-label="{{title}}">{{t "Read this"}}<svg class="icon is-medium"><use xlink:href="#icon-arrow"></use></svg></a>
             {{/match}}
         </div>
 
