--- a/partials/story/story-post.hbs
+++ b/partials/story/story-post.hbs
@@ -28,8 +28,8 @@
 
     <div class="story-post-body">
         <div class="post-body text-xl mb-5"><p>{{excerpt}}</p></div>
-        <a href="{{url}}" class="link is-hover font-medium">
-            {{t "Read more"}}
+        <a href="{{url}}" class="link is-hover font-medium" aria-label="{{title}}">
+            {{t "Read this"}}
             <svg class="icon is-medium"><use xlink:href="#icon-arrow"></use></svg>
         </a>
     </div>
