initial commit, various assets were added, modified and extended.

--- a/default.hbs
+++ b/default.hbs
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <!--
-    Design by:
+    Redesigned with ✨ by:
     ——————————
-        GODO FREDO
-        ✉ https://godofredo.ninja
-        ✎ @GodoFredoNinja
-        ✈ Lima - Perú
+        @ikonnow
+        ✉ ikonnow@pop-os.local
+        ✈ https://ikonnow.com
 -->
-<html lang="{{@site.locale}}"{{#match @custom.color_scheme "Dark"}} class="dark"{{/match}}>
+<html lang="{{@site.locale}}"
+    {{#match @custom.color_scheme "Dark"}} class="dark"{{/match}}
+    data-corner-radius-factor="{{@custom.corner_radius_factor}}"
+>
 <head>
     {{!-- Document Settings --}}
     <meta charset="utf-8" />
@@ -69,7 +71,9 @@
     {{!-- Block for Headers --}}
     {{{block "header"}}}
 </head>
-<body class="{{block "special_body_class"}}">
+<body class="{{block "special_body_class"}}"
+    data-corner-radius-factor="{{@custom.corner_radius_factor}}"
+>
     <div class="simply-viewport flex flex-col justify-start">
         {{!-- Header Content with User Account ./partials/layout/header-user-account.hbs --}}
         {{#match @custom.header "Default"}}{{> "layout/header"}}{{/match}}
@@ -105,13 +109,19 @@
     {{!-- Ghost outputs important scripts and data with this tag --}}
     {{ghost_foot}}
 
+    {{!-- App Scripts --}}
+    <script defer src="{{asset "scripts/infinite-scroll.min.js"}}"></script>
+    <script defer src="{{asset "scripts/medium-zoom.min.js"}}"></script>
+    <script defer src="{{asset "scripts/app.min.js"}}"></script>
+    <script defer src="{{asset "scripts/corner-radius.min.js"}}"></script>
+
     {{!-- script --}}
     {{{block "scripts"}}}
 
     {{!-- Main scripts --}}
-    <script src="{{#is "post, page"}}{{asset "scripts/post.js"}}{{else}}{{asset "scripts/main.js"}}{{/is}}"></script>
+    <script src="{{#is "post, page"}}{{asset "scripts/post.min.js"}}{{else}}{{asset "scripts/main.min.js"}}{{/is}}"></script>
 
     {{!-- Pagination Infinite Scroll --}}
-    {{#match @custom.pagination "Infinite Scroll"}}{{#if pagination.next}}<script src="{{asset "scripts/pagination.js"}}" defer async></script>{{/if}}{{/match}}
+    {{#match @custom.pagination "Infinite Scroll"}}{{#if pagination.next}}<script src="{{asset "scripts/pagination.min.js"}}" defer async></script>{{/if}}{{/match}}
 </body>
 </html>
