--- a/partials/layout/footer-not-menu.hbs
+++ b/partials/layout/footer-not-menu.hbs
@@ -16,13 +16,15 @@
                 {{> "widget/social-media" class="footer-social-media social-media is-inline my-5 lg:my-0 lg:ml-10"}}
             </div>
 
-            <div class="footer-copy lg:text-right text-sm">
+            <div class="footer-copy text-left text-sm">
                 &copy; {{date format="YYYY"}} {{@site.title}}. All rights reserved.
                 <div class="mt-2">
-                    Design with
-                    <svg class="icon animated infinite pulse" style="color:red;width:15px"><use xlink:href="#icon-heart"></use></svg>
-                    by
-                    <a href="https://godofredo.ninja" class="hover:text-primary" title="Developer FullStack.">@GodoFredoNinja</a>
+                    Redesigned with ✨ by
+                    {{#if @site.twitter}}
+                    <a href="{{twitter_url}}" class="hover:text-primary" title="Developer" target="_blank" rel="noopener noreferrer">@ikonnow</a>
+                    {{else}}
+                    <a href="https://x.com/ikonnow" class="hover:text-primary" title="Developer" target="_blank" rel="noopener noreferrer">@ikonnow</a>
+                    {{/if}}
                 </div>
             </div>
 
