--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -54,7 +54,7 @@
         {{/foreach}}
 
         {{!-- Has DropDown Menu --}}
-        {{#if navigationDropDown}}
+        {{#if @site.navigation_dropdown}}
         <li class="dropdown is-hoverable">
             <a href="#" class="mainMenu-link dropdown-trigger h-16 flex items-center p-3 text-base text-header-link hover:text-primary">
                 <span>{{t "More"}}</span>
