--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,6 +34,7 @@
 @import "./components/dropdown.css";
 @import "./components/story.css";
 @import "./components/code.css";
+@import "./components/corner-radius.css";
 /* @import "./components/modal.css"; */
 
 /* Pages
